@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-05T01:21:08Z",
-  "count_outdated" : 321,
-  "uniques_outdated" : 180,
-  "count" : 342,
-  "uniques" : 194,
+  "timestamp" : "2022-06-05T16:19:00Z",
+  "count_outdated" : 324,
+  "uniques_outdated" : 181,
+  "count" : 343,
+  "uniques" : 195,
   "clones" : [
-    {
-      "timestamp": "2022-05-22T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-28T00:00:00Z",
       "count": 2,
@@ -67,6 +60,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-06-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
