@@ -1,12 +1,7 @@
 {
-  "count": 21,
-  "uniques": 7,
+  "count": 19,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2022-05-22T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-28T00:00:00Z",
       "count": 2,
@@ -46,6 +41,11 @@
       "timestamp": "2022-06-04T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-06-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
