@@ -1,3 +1,10 @@
+2022-06-05T16:19:00Z:
+* notice: last 14d: unq all: 6 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 180 321 / 194 342
+* notice: next accum: outdated-unq outdated-all / unq all: 181 324 / 195 343
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-05-22] / [2022-06-05]
+
 2022-06-05T01:21:08Z:
 * notice: last 14d: unq all: 7 21
 * notice: prev accum: outdated-unq outdated-all / unq all: 180 321 / 193 340
